# SoftLoaf-Trichrome

./: .gitignore  AGENTS.md  CMakeLists.txt  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  vcpkg.json
.github/vcpkg/windows/: vcpkg.json
.github/workflows/: ci.yml  release-macos.yml  release-windows.yml
docs/: README_en.md  architecture.md  color_management.md  export_real_environment_testing.md  extraction.md  raw_correctness_report.md  release.md  todo.md  windows11_303mini_environment.md  windows_path_audit.md
docs/release_notes/: v0.1.0-alpha.1.md  v0.1.0-alpha.2.md  v0.1.0-alpha.3.md  v0.1.0-alpha.4.md  v0.2.0-beta.1.md  v0.2.0-beta.2.md  v0.2.0-beta.3.md  v0.2.0-beta.4.md  v0.2.0.md
docs/status/: raw_compatibility_status_20260705.md
include/softloaf_trichrome/: artifact.hpp  cache_probe.hpp  color_management.hpp  composer.hpp  image_buf.hpp  import.hpp  model.hpp  raw_camera_matrix.hpp  raw_classification.hpp  raw_decode_hints.hpp  raw_levels.hpp  raw_metadata.hpp  structure.hpp
qml/: ExportWindow.qml  Main.qml  ThemedButton.qml  ThemedComboBox.qml
resources/: AppIcon.icns  windows_app_icon.rc
src/: color_management.cpp  desktop_decoder.cpp  desktop_decoder.hpp  export_encode_backend.cpp  export_encode_backend.hpp  export_encode_backend_d3d12.cpp  export_encode_backend_metal.mm  export_naming.hpp  export_writer.cpp  export_writer.hpp  main.cpp  native_open_panel.hpp  native_open_panel.mm  native_open_panel_stub.cpp  obs_log.cpp  obs_log.hpp  project_store.cpp  project_store.hpp  qt_path_utils.hpp  trichrome_cache.cpp  trichrome_cache.hpp  trichrome_controller.cpp  trichrome_controller.hpp  trichrome_image_provider.cpp  trichrome_image_provider.hpp
tests/: export_integration_test.cpp  raw_fixture_regression_test.cpp  trichrome_desktop_core_test.cpp  trichrome_smoke.cpp
tests/fixtures/: raw_compat_manifest.tsv
tools/: check_macos_compatibility.sh  compare_rt32.py  make_rt32_oracle.py  notarize_macos_dmg.sh  package_macos_dmg.sh  package_windows.ps1  softloaf_image_stats.cpp  softloaf_raw_probe.cpp  softloaf_raw_provenance_matrix.cpp  softloaf_rt32_compare.cpp  softloaf_trichrome_check.cpp  windows_installer.nsi
